force-app/main/default/objects/Regression_Test_Run__c/Regression_Test_Run__c.object-meta.xml
<CustomObject>
    <description>Represents a single execution of a regression test suite, tracking overall results and layer-by-layer status.</description>
    <label>Regression Test Run</label>
    <nameField>
        <displayFormat>RUN-{0000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regression Test Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>