force-app/main/default/objects/Regression_Test_Run__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <description>AsyncApexJob ID for LWC polling</description>
    <label>Batch Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>