force-app/main/default/objects/Regression_Test_Run__c/fields/Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Code_Coverage__c</fullName>
    <label>Code Coverage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>