force-app/main/default/objects/Regression_Test_Run__c/fields/Error_Summary__c.field-meta.xml
<CustomField>
    <fullName>Error_Summary__c</fullName>
    <description>Quick summary of top failures</description>
    <label>Error Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>