force-app/main/default/objects/Regression_Test_Run__c/fields/Failed__c.field-meta.xml
<CustomField>
    <fullName>Failed__c</fullName>
    <label>Failed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>