force-app/main/default/objects/Regression_Test_Run__c/fields/Layer_2_Status__c.field-meta.xml
<CustomField>
    <fullName>Layer_2_Status__c</fullName>
    <label>Layer 2 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>