force-app/main/default/objects/Regression_Test_Run__c/fields/Pass_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pass_Rate__c</fullName>
    <label>Pass Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <formula>IF(Total_Tests__c &gt; 0, Passed__c / Total_Tests__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Percent</type>
</CustomField>