force-app/main/default/objects/Regression_Test_Run__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <label>Passed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>