force-app/main/default/objects/Regression_Test_Run__c/fields/Regression_Count__c.field-meta.xml
<CustomField>
    <fullName>Regression_Count__c</fullName>
    <description>Count of tests that regressed</description>
    <label>Regression Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>