force-app/main/default/objects/Regression_Test_Run__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <label>Run Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>