force-app/main/default/objects/Regression_Test_Run__c/fields/Skipped__c.field-meta.xml
<CustomField>
    <fullName>Skipped__c</fullName>
    <label>Skipped</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>