force-app/main/default/objects/Regression_Test_Run__c/fields/Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>Test_Suite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Suite</label>
    <referenceTo>Regression_Test_Suite__c</referenceTo>
    <relationshipLabel>Test Runs</relationshipLabel>
    <relationshipName>Test_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>