force-app/main/default/objects/Regression_Test_Run__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>CI CD</fullName>
            </value>
            <value>
                <fullName>Pre-Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>