force-app/main/default/objects/Regression_Test_Run__c/listViews/All_Test_Runs.listView-meta.xml
<ListView>
    <fullName>All_Test_Runs</fullName>
    <columns>NAME</columns>
    <columns>Test_Suite__c</columns>
    <columns>Status__c</columns>
    <columns>Run_Date__c</columns>
    <columns>Total_Tests__c</columns>
    <columns>Passed__c</columns>
    <columns>Failed__c</columns>
    <columns>Pass_Rate__c</columns>
    <columns>Duration_Seconds__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Test Runs</label>
</ListView>