force-app/main/default/objects/Regression_Test_Run__c/listViews/Recent_Runs.listView-meta.xml
<ListView>
    <fullName>Recent_Runs</fullName>
    <columns>NAME</columns>
    <columns>Test_Suite__c</columns>
    <columns>Status__c</columns>
    <columns>Run_Date__c</columns>
    <columns>Total_Tests__c</columns>
    <columns>Passed__c</columns>
    <columns>Failed__c</columns>
    <columns>Pass_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Run_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recent Runs (Last 30 Days)</label>
</ListView>